[package]
name = "ogg-table"
version = "0.1.0"
edition = "2021"

description = "ogg-vorbis reader with fast random accesses"
repository = "https://github.com/LaurentMazare/ogg-table"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
symphonia-codec-vorbis = "0.5.4"
symphonia-core = "0.5.4"
